[package]
name = "asset-rust"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.9.0"
chromiumoxide = { git = "https://github.com/mattsse/chromiumoxide", branch = "main"}
dotenv = "0.15.0"
futures = "0.3.15"
